--- a/mwa2/assignment4/diary.css
+++ b/mwa2/assignment4/diary.css
@@ -1,5 +1,5 @@
 body, input, textarea {
-  font-family: Trebuchet MS, Verdana, Arial, Helvetica, sans-serif;
+  font-family: Trebuchet MS, Arial, Helvetica, sans-serif;
 }
 
 body[data-mode="list"] #page_list, 
@@ -18,7 +18,7 @@ header {
   height: 40px;
 }
 header h1 {
-  font-size: 1.4em;
+  font-size: 1.3em;
   line-height: 40px;
   padding-left: 10px;
 }
@@ -51,7 +51,7 @@ header .hd_buttons a {
 #page_list .entries article h2 {
   color: #333;
   font-size: 1.2em;
-  line-height: 1.2;
+  line-height: 1.3;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
