--- a/mwa2/assignment6/main.css
+++ b/mwa2/assignment6/main.css
@@ -2,6 +2,7 @@ body {
   font-family: Trebuchet MS, Arial, Helvetica, sans-serif;
 }
 
+
 header {
   position: relative;
   background: #0095C3;
@@ -15,7 +16,55 @@ header h1 {
   padding-left: 10px;
 }
 
-#results article {
+
+.button { 
+  background: -moz-linear-gradient(top,  rgba(255,255,255,0.5) 0%, rgba(255,255,255,0) 100%); 
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0.5)), color-stop(100%,rgba(255,255,255,0))); 
+  background: -webkit-linear-gradient(top,  rgba(255,255,255,0.5) 0%,rgba(255,255,255,0) 100%); 
+  background: -o-linear-gradient(top,  rgba(255,255,255,0.5) 0%,rgba(255,255,255,0) 100%); 
+  background: linear-gradient(top,  rgba(255,255,255,0.5) 0%,rgba(255,255,255,0) 100%); 
+
+  -webkit-border-radius: 5px;
+     -moz-border-radius: 5px;
+          border-radius: 5px;
+
+  display: block;
+  color: #fff;
+  font-weight: bold;
+  text-align: center;
+  cursor: pointer;
+  height: 30px;
+  line-height: 30px;
+}
+
+.button_save {
+  background-color: #007200;
+}
+.button_cancel {
+  background-color: #6E6E6E;
+}
+
+
+#page_list section#city {
+  position: relative;
+  padding: 5px 10px;
+  border-bottom: 1px solid #ccc;
+}
+
+#page_list section#city #city_name {
+  display: inline-block;
+  padding-right: 70px;
+}
+
+#page_list section#city #lnk_city_edit {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  color: #0080A6;
+  cursor: pointer;
+}
+
+#page_list section#results article {
   position: relative;
   border-bottom: 1px solid #ccc;
   padding: 15px 10px;
@@ -23,11 +72,11 @@ header h1 {
   font-size: 1.2em;
   line-height: 1.3;
 }
-#results article:last-child {
+#page_list section#results article:last-child {
   border-bottom: 0 none;
 }
 
-#results article img {
+#page_list section#results article img {
   position: absolute;
   top: 15px;
   left: 10px;
@@ -39,18 +88,34 @@ header h1 {
           border-radius: 5px
 }
 
-#results article h2, 
-#results article p {
+#page_list section#results article h2, 
+#page_list section#results article p {
   margin-left: 60px;
 }
 
-#results article p {
+#page_list section#results article p {
   color: #666;
   padding-top: 0.3em;
 }
 
-#results article p a {
+#page_list section#results article p a {
   color: #0084B4;
   text-decoration: none;
+}
+
+
+#page_edit_city input[type="text"], 
+#page_edit_city a.button {
+  -moz-box-sizing: border-box;
+       box-sizing: border-box;
+  display: block;
+  width: 90%;
+  margin: 10px auto;
+}
+#page_edit_city input[type="text"] {
+  height: 30px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  text-align: center;
 }
 
