--- a/mwa2/assignment6/main.css
+++ b/mwa2/assignment6/main.css
@@ -41,8 +41,8 @@ header h1 {
   font-weight: bold;
   text-align: center;
   cursor: pointer;
-  height: 30px;
-  line-height: 30px;
+  height: 40px;
+  line-height: 40px;
   text-decoration: none;
 }
 
@@ -135,6 +135,7 @@ header h1 {
 #page_edit_city a.button {
   -moz-box-sizing: border-box;
        box-sizing: border-box;
+
   display: block;
   width: 90%;
   margin: 10px auto;
@@ -142,6 +143,11 @@ header h1 {
 #page_edit_city input[type="text"] {
   height: 30px;
   margin-top: 30px;
-  margin-bottom: 30px;
+  margin-bottom: 25px;
   text-align: center;
+
+  border: 1px solid #aaa;
+  -webkit-border-radius: 5px;
+     -moz-border-radius: 5px;
+          border-radius: 5px;
 }
