--- a/mwa2/assignment6/main.css
+++ b/mwa2/assignment6/main.css
@@ -62,6 +62,7 @@ header h1 {
   position: relative;
   padding: 5px 10px;
   border-bottom: 1px solid #ccc;
+  background-color: #efefef;
 }
 
 #page_list section#city #city_name {
@@ -83,7 +84,7 @@ header h1 {
   border-bottom: 1px solid #ccc;
   padding: 15px 10px;
   color: #333;
-  font-size: 1.2em;
+  font-size: 1em;
   line-height: 1.3;
 }
 #page_list section#results article:last-child {
