--- a/mwa2/assignment6/main.css
+++ b/mwa2/assignment6/main.css
@@ -32,6 +32,7 @@ header h1 {
   background: -o-linear-gradient(top,  rgba(255,255,255,0.5) 0%,rgba(255,255,255,0) 100%); 
   background: linear-gradient(top,  rgba(255,255,255,0.5) 0%,rgba(255,255,255,0) 100%); 
 
+  border: 1px outset #777;
   -webkit-border-radius: 5px;
      -moz-border-radius: 5px;
           border-radius: 5px;
@@ -46,6 +47,10 @@ header h1 {
   text-decoration: none;
 }
 
+.button_auto {
+  background-color: #04336B;
+  /* background-color: #D4001A; */
+}
 .button_save {
   background-color: #007200;
 }
@@ -86,6 +91,7 @@ header h1 {
   color: #333;
   font-size: 1em;
   line-height: 1.3;
+  overflow: hidden;
 }
 #page_list section#results article:last-child {
   border-bottom: 0 none;
@@ -118,15 +124,6 @@ header h1 {
   text-decoration: none;
 }
 
-#page_list section#loading {
-  background: transparent url('waiting.gif') no-repeat center bottom;
-  width: 90%;
-  height: 70px;
-  margin: 40px auto 0 auto;
-  text-align: center;
-  color: #555;
-}
-
 
 /**
  * Page: edit city
@@ -152,3 +149,20 @@ header h1 {
      -moz-border-radius: 5px;
           border-radius: 5px;
 }
+
+
+/**
+ * Page: loading
+ */
+#page_loading section#loading {
+  background: transparent url('waiting.gif') no-repeat center 30px;
+  position: absolute;
+  top: 30%;
+  left: 0;
+  right: 0;
+  padding-top: 75px;
+  text-align: center;
+  background-color: #fff;
+  color: #555;
+}
+
