--- a/rp/partials/teams.html
+++ b/rp/partials/teams.html
@@ -1,3 +1,10 @@
-Teams
-
-{{data}}
+<div class="listview">
+  <div ng-repeat="team in data.teams | orderBy: 'name'" class="group">
+    <div class="group-hd">{{team.name}}</div>
+    <div class="group-bd">
+      <div ng-repeat="story in data.stories | filter: { team_id: team.id } | orderBy: 'description'" class="story-card">
+        {{story.description}}
+      </div>
+    </div>
+  </div>
+</div>
