Added story card colors

--- a/rp/css/app.css
+++ b/rp/css/app.css
@@ -62,3 +62,13 @@ body {
           padding: 1em;
           margin-left: 1em;
           border: 1px solid #bbbbbb; }
+          #mainview .listview .group .group-bd .story-card.yellow {
+            background: #f8e15d; }
+          #mainview .listview .group .group-bd .story-card.green {
+            background: #73b736; }
+          #mainview .listview .group .group-bd .story-card.red {
+            background: #d0402f;
+            color: white; }
+          #mainview .listview .group .group-bd .story-card.orange {
+            background: #f7941d;
+            color: white; }
