--- a/rp/partials/teams.html
+++ b/rp/partials/teams.html
@@ -2,7 +2,9 @@
   <div ng-repeat="team in data.teams | orderBy: 'name'" class="group">
     <div class="group-hd">{{team.name}}</div>
     <div class="group-bd">
-      <div ng-repeat="story in data.stories | filter: { team_id: team.id } | orderBy: 'description'" class="story-card">
+      <div 
+        ng-repeat="story in data.stories | filter: { team_id: team.id } | orderBy: 'description'" 
+        ng-class="['story-card', getThemeById(story.theme_id).color]">
         {{story.description}}
       </div>
     </div>
