--- a/rp/partials/themes.html
+++ b/rp/partials/themes.html
@@ -2,7 +2,9 @@
   <div ng-repeat="theme in data.themes | orderBy: 'name'" class="group">
     <div class="group-hd">{{theme.name}}</div>
     <div class="group-bd">
-      <div ng-repeat="story in data.stories | filter: { theme_id: theme.id } | orderBy: 'description'" class="story-card">
+      <div 
+        ng-repeat="story in data.stories | filter: { theme_id: theme.id } | orderBy: 'description'" 
+        ng-class="['story-card', getThemeById(story.theme_id).color]">
         {{story.description}}
       </div>
     </div>
