--- a/rp/partials/teams.html
+++ b/rp/partials/teams.html
@@ -1,11 +1,10 @@
 <div class="listview">
-  <div ng-repeat="team in data.teams | orderBy: 'name'" class="group">
+  <div ng-repeat="team in teams | orderBy: 'name'" class="group">
     <div class="group-hd">{{team.name}}</div>
     <div class="group-bd">
-      <div 
-        ng-repeat="story in data.stories | filter: { team_id: team.id } | orderBy: 'description'" 
-        ng-class="['story-card', getThemeById(story.theme_id).color]">
-        {{story.description}}
+      <div ng-repeat="story in team.stories | orderBy: 'name'" 
+        ng-class="['story-card', story.themeColor]">
+        {{story.name}}
       </div>
     </div>
   </div>
