--- a/incplan_dashboard/css/app.css
+++ b/incplan_dashboard/css/app.css
@@ -6,6 +6,7 @@
   float: left;
   display: inline;
   overflow: hidden;
+  box-sizing: border-box;
   *zoom: 1; }
 
 .grid-row {
@@ -128,3 +129,5 @@ ol.list-view.savings li .note {
       border-radius: 7px; }
       #ctn-main .panel-rcs .left-vs-right #ctn-left {
         background-color: #f2f2f2; }
+      #ctn-main .panel-rcs .left-vs-right #ctn-right {
+        padding-left: 40px; }
