--- a/incplan_dashboard/css/app.css
+++ b/incplan_dashboard/css/app.css
@@ -55,6 +55,21 @@ body {
   width: 100%;
   height: 100%; }
 
+h1,
+h2,
+h3 {
+  font-style: normal;
+  font-weight: bold; }
+
+h1 {
+  font-size: 1.5em; }
+
+h2 {
+  font-size: 1.35em; }
+
+h3 {
+  font-size: 1.2em; }
+
 ol,
 ul,
 li {
@@ -110,9 +125,15 @@ ol.list-view li {
       font-size: 1.45em; }
     ol.list-view li.header .right-title {
       font-size: 1.45em; }
-ol.list-view.savings li .note {
-  float: right;
+
+.modal-dialog .modal-content {
   overflow: hidden; }
+  .modal-dialog .modal-content .modal-header {
+    background-color: #428bca;
+    color: white; }
+    .modal-dialog .modal-content .modal-header h1 {
+      margin: 10px 0;
+      line-height: 1; }
 
 #ctn-main {
   padding: 1em;
@@ -130,14 +151,24 @@ ol.list-view.savings li .note {
       #ctn-main .panel-rcs .left-vs-right #ctn-left {
         background-color: #f2f2f2;
         min-height: 520px; }
+        #ctn-main .panel-rcs .left-vs-right #ctn-left #ctn-soc-sec-strategy {
+          padding: 0 1em 1em;
+          margin-bottom: 1em;
+          border-bottom: 1px solid #d8d8d8; }
+          #ctn-main .panel-rcs .left-vs-right #ctn-left #ctn-soc-sec-strategy p {
+            line-height: 1.2; }
+          #ctn-main .panel-rcs .left-vs-right #ctn-left #ctn-soc-sec-strategy ol {
+            margin-bottom: 1em; }
+            #ctn-main .panel-rcs .left-vs-right #ctn-left #ctn-soc-sec-strategy ol li {
+              line-height: 1.5; }
+        #ctn-main .panel-rcs .left-vs-right #ctn-left #savings-list-view {
+          border-top: 1px solid #d8d8d8;
+          padding-top: 1em; }
       #ctn-main .panel-rcs .left-vs-right #ctn-right {
         padding: 0 20px 0 40px; }
         #ctn-main .panel-rcs .left-vs-right #ctn-right #toggle-goal {
           text-align: right;
-          line-height: 3; }
-          #ctn-main .panel-rcs .left-vs-right #ctn-right #toggle-goal A {
-            text-decoration: none;
-            color: #7f7f7f; }
+          margin-top: 1em; }
         #ctn-main .panel-rcs .left-vs-right #ctn-right #pct-slider {
           text-align: center;
           line-height: 1.5; }
