--- a/incplan_dashboard/css/app.css
+++ b/incplan_dashboard/css/app.css
@@ -61,15 +61,6 @@ h3 {
   font-style: normal;
   font-weight: bold; }
 
-h1 {
-  font-size: 1.5em; }
-
-h2 {
-  font-size: 1.35em; }
-
-h3 {
-  font-size: 1.2em; }
-
 ol,
 ul,
 li {
@@ -133,7 +124,8 @@ ol.list-view li {
     color: white; }
     .modal-dialog .modal-content .modal-header h1 {
       margin: 10px 0;
-      line-height: 1; }
+      line-height: 1;
+      font-size: 25px; }
 
 #ctn-main {
   padding: 1em;
@@ -148,27 +140,35 @@ ol.list-view li {
       background-color: #fff;
       border: 1px solid #d7d7d7;
       border-radius: 7px; }
+      #ctn-main .panel-rcs .left-vs-right #ctn-soc-sec-strategy {
+        padding: 30px 20px 20px;
+        border-bottom: 1px solid #d8d8d8;
+        position: relative;
+        background-color: #d9edf7;
+        border-color: #bce8f1;
+        color: #31708f; }
+        #ctn-main .panel-rcs .left-vs-right #ctn-soc-sec-strategy h3 {
+          margin-top: 0; }
+        #ctn-main .panel-rcs .left-vs-right #ctn-soc-sec-strategy #ctn-strategies {
+          position: absolute;
+          bottom: 30px;
+          right: 30px; }
+        #ctn-main .panel-rcs .left-vs-right #ctn-soc-sec-strategy #ctn-edit {
+          display: none; }
       #ctn-main .panel-rcs .left-vs-right #ctn-left {
         background-color: #f2f2f2;
+        border-right: 1px solid #d8d8d8;
         min-height: 520px; }
-        #ctn-main .panel-rcs .left-vs-right #ctn-left #ctn-soc-sec-strategy {
-          padding: 0 1em 1em;
-          margin-bottom: 1em;
-          border-bottom: 1px solid #d8d8d8; }
-          #ctn-main .panel-rcs .left-vs-right #ctn-left #ctn-soc-sec-strategy p {
-            line-height: 1.2; }
-          #ctn-main .panel-rcs .left-vs-right #ctn-left #ctn-soc-sec-strategy ol {
-            margin-bottom: 1em; }
-            #ctn-main .panel-rcs .left-vs-right #ctn-left #ctn-soc-sec-strategy ol li {
-              line-height: 1.5; }
+        #ctn-main .panel-rcs .left-vs-right #ctn-left #incomes-list-view,
         #ctn-main .panel-rcs .left-vs-right #ctn-left #savings-list-view {
-          border-top: 1px solid #d8d8d8;
           padding-top: 1em; }
+        #ctn-main .panel-rcs .left-vs-right #ctn-left #savings-list-view {
+          border-top: 1px solid #d8d8d8; }
       #ctn-main .panel-rcs .left-vs-right #ctn-right {
         padding: 0 20px 0 40px; }
-        #ctn-main .panel-rcs .left-vs-right #ctn-right #toggle-goal {
+        #ctn-main .panel-rcs .left-vs-right #ctn-right .btn-toolbar {
           text-align: right;
-          margin-top: 1em; }
+          margin-top: 30px; }
         #ctn-main .panel-rcs .left-vs-right #ctn-right #pct-slider {
           text-align: center;
           line-height: 1.5; }
