--- a/incplan_dashboard/css/app.scss
+++ b/incplan_dashboard/css/app.scss
@@ -58,15 +58,6 @@ h3 {
   font-style: normal;
   font-weight: bold;
 }
-h1 {
-  font-size: 1.5em;
-}
-h2 {
-  font-size: 1.35em;
-}
-h3 {
-  font-size: 1.2em;
-}
 
 ol, 
 ul, 
@@ -164,6 +155,7 @@ ol.list-view {
       h1 {
         margin: 10px 0;
         line-height: 1;
+        font-size: 25px;
       }
     }
   }
@@ -188,43 +180,51 @@ ol.list-view {
       border: 1px solid #d7d7d7;
       border-radius: 7px;
 
+      #ctn-soc-sec-strategy {
+
+        padding: 30px 20px 20px;
+        border-bottom: 1px solid $pnl-border-color;
+        position: relative;
+        background-color: #d9edf7;
+        border-color: #bce8f1;
+        color: #31708f;
+
+        h3 {
+          margin-top: 0;
+        }
+
+        #ctn-strategies {
+          position: absolute;
+          bottom: 30px;
+          right: 30px;
+        }
+
+        #ctn-edit {
+          display: none;
+        }
+      }
+
       #ctn-left {
 
         background-color: $pnl-bg-color;
+        border-right: 1px solid $pnl-border-color;
         min-height: 520px;
 
-        #ctn-soc-sec-strategy {
-
-          padding: 0 1em 1em;
-          margin-bottom: 1em;
-          border-bottom: 1px solid $pnl-border-color;
-
-          p {
-            line-height: 1.2;
-          }
-
-          ol {
-
-            margin-bottom: 1em;
-
-            li {
-              line-height: 1.5;
-            }
-          }
+        #incomes-list-view, 
+        #savings-list-view {
+          padding-top: 1em;
         }
-
         #savings-list-view {
           border-top: 1px solid $pnl-border-color;
-          padding-top: 1em;
         }
       }
 
       #ctn-right {
         padding: 0 20px 0 40px;
 
-        #toggle-goal {
+        .btn-toolbar {
           text-align: right;
-          margin-top: 1em;
+          margin-top: 30px;
         }
 
         #pct-slider {
