--- a/incplan_dashboard/css/app.scss
+++ b/incplan_dashboard/css/app.scss
@@ -59,6 +59,33 @@ h3 {
   font-weight: bold;
 }
 
+.wait-state-container {
+
+  .wait-state {
+
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+
+    .wait-state-content {
+      width: 100%;
+      height: 100%;
+      text-align: center;
+    }
+  }
+
+  .wait-state-hidden {
+    visibility: hidden;
+  }
+
+  &.wait-state-container-relative {
+    position: relative;
+  }
+
+}
+
 ol, 
 ul, 
 li {
@@ -248,6 +275,7 @@ ol.list-view {
           }
 
           input[type="range"] {
+            display: inline-block;
             width: 100%;
           }
 
@@ -255,8 +283,15 @@ ol.list-view {
             margin: 0.3em 0 0 0;
           }
         }
-      }
+      } /* end of #ctn-right */
 
+      #ctn-wait {
+        h3 {
+          font-size: 17px;
+          font-weight: normal;
+          margin: 200px 0 0 0;
+        }
+      }
     }
 
   }
