added soc sec start age sliders

--- a/incplan_dashboard/css/app.scss
+++ b/incplan_dashboard/css/app.scss
@@ -296,3 +296,13 @@ ol.list-view {
 
   }
 }
+
+#ctn-socsec-start-ages {
+
+  padding: 2em 3em;
+
+  output {
+    display: inline;
+    font-weight: bold;
+  }
+}
