--- a/incplan_dashboard/css/app.css
+++ b/incplan_dashboard/css/app.css
@@ -205,3 +205,9 @@ ol.list-view li {
         font-size: 17px;
         font-weight: normal;
         margin: 200px 0 0 0; }
+
+#ctn-socsec-start-ages {
+  padding: 2em 3em; }
+  #ctn-socsec-start-ages output {
+    display: inline;
+    font-weight: bold; }
