--- a/incplan_dashboard/css/app.css
+++ b/incplan_dashboard/css/app.css
@@ -68,8 +68,11 @@ h3 {
   top: 0;
   bottom: 0; }
   .wait-state-container .wait-state .wait-state-content {
-    width: 100%;
-    height: 100%;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
     text-align: center; }
 .wait-state-container .wait-state-hidden {
   visibility: hidden; }
@@ -142,20 +145,26 @@ ol.list-view li {
       line-height: 1;
       font-size: 25px; }
 
+.yui3-fe-stacked-barchart-bar-seg {
+  cursor: pointer; }
+
 #ctn-main {
   padding: 1em;
   width: 950px;
-  margin: 0 auto; }
+  margin: 0 auto;
+  /* end of .panel-rcs */ }
   #ctn-main .panel-rcs {
     background-color: #f2f2f2;
     border: 4px solid #fff;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(50, 50, 50, 0.3); }
+    box-shadow: 0 0 10px rgba(50, 50, 50, 0.3);
+    /* end of .left-vs-right */ }
     #ctn-main .panel-rcs .left-vs-right {
       background-color: #fff;
       border: 1px solid #d7d7d7;
       border-radius: 7px;
-      /* end of #ctn-right */ }
+      /* end of #ctn-right */
+      /* end of #ctn-wait */ }
       #ctn-main .panel-rcs .left-vs-right #ctn-soc-sec-strategy {
         padding: 30px 20px 20px;
         border-bottom: 1px solid #d8d8d8;
@@ -174,7 +183,7 @@ ol.list-view li {
       #ctn-main .panel-rcs .left-vs-right #ctn-left {
         background-color: #f2f2f2;
         border-right: 1px solid #d8d8d8;
-        min-height: 520px; }
+        min-height: 550px; }
         #ctn-main .panel-rcs .left-vs-right #ctn-left #incomes-list-view,
         #ctn-main .panel-rcs .left-vs-right #ctn-left #savings-list-view {
           padding-top: 1em; }
@@ -184,10 +193,11 @@ ol.list-view li {
         padding: 0 20px 0 40px; }
         #ctn-main .panel-rcs .left-vs-right #ctn-right .btn-toolbar {
           text-align: right;
-          margin-top: 30px; }
+          margin: 30px 0 20px; }
         #ctn-main .panel-rcs .left-vs-right #ctn-right #pct-slider {
           text-align: center;
-          line-height: 1.5; }
+          line-height: 1.5;
+          font-size: 16px; }
           #ctn-main .panel-rcs .left-vs-right #ctn-right #pct-slider em {
             font-style: normal;
             font-weight: bold;
@@ -201,13 +211,21 @@ ol.list-view li {
             width: 100%; }
           #ctn-main .panel-rcs .left-vs-right #ctn-right #pct-slider #remaining-amount {
             margin: 0.3em 0 0 0; }
-      #ctn-main .panel-rcs .left-vs-right #ctn-wait h3 {
-        font-size: 17px;
-        font-weight: normal;
-        margin: 200px 0 0 0; }
+      #ctn-main .panel-rcs .left-vs-right #ctn-wait {
+        background-color: white;
+        color: black; }
+        #ctn-main .panel-rcs .left-vs-right #ctn-wait h3 {
+          font-size: 22px;
+          font-weight: normal;
+          margin: 120px 0 20px; }
+        #ctn-main .panel-rcs .left-vs-right #ctn-wait .progress {
+          width: 400px;
+          margin: 0 auto; }
 
 #ctn-socsec-start-ages {
   padding: 2em 3em; }
+  #ctn-socsec-start-ages input[type="range"] {
+    display: inline-block; }
   #ctn-socsec-start-ages output {
     display: inline;
     font-weight: bold; }
