--- a/incplan_dashboard/css/app.scss
+++ b/incplan_dashboard/css/app.scss
@@ -14,6 +14,8 @@ $other-income-color: #00c0ee;
 $socsec-income-color: #4e86ae;
 $modal-header-bg-color: #428bca;
 $modal-header-color: #fff;
+$mask-bg-color: #fff;
+$mask-color: #000;
 
 
 /*******************************************************************************************
@@ -70,8 +72,11 @@ h3 {
     bottom: 0;
 
     .wait-state-content {
-      width: 100%;
-      height: 100%;
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
       text-align: center;
     }
   }
@@ -188,6 +193,10 @@ ol.list-view {
   }
 }
 
+.yui3-fe-stacked-barchart-bar-seg {
+  cursor: pointer;
+}
+
 #ctn-main {
 
   padding: 1em;
@@ -235,7 +244,7 @@ ol.list-view {
 
         background-color: $pnl-bg-color;
         border-right: 1px solid $pnl-border-color;
-        min-height: 520px;
+        min-height: 550px;
 
         #incomes-list-view, 
         #savings-list-view {
@@ -251,13 +260,14 @@ ol.list-view {
 
         .btn-toolbar {
           text-align: right;
-          margin-top: 30px;
+          margin: 30px 0 20px;
         }
 
         #pct-slider {
 
           text-align: center;
           line-height: 1.5;
+          font-size: 16px;
 
           em {
             font-style: normal;
@@ -286,20 +296,34 @@ ol.list-view {
       } /* end of #ctn-right */
 
       #ctn-wait {
-        h3 {
-          font-size: 17px;
-          font-weight: normal;
-          margin: 200px 0 0 0;
-        }
-      }
-    }
 
-  }
+        background-color: $mask-bg-color;
+        color: $mask-color;
+
+        h3 {
+          font-size: 22px;
+          font-weight: normal;
+          margin: 120px 0 20px;
+        }
+
+        .progress {
+          width: 400px;
+          margin: 0 auto;
+        }
+      } /* end of #ctn-wait */
+
+    } /* end of .left-vs-right */
+
+  } /* end of .panel-rcs */
 }
 
 #ctn-socsec-start-ages {
 
   padding: 2em 3em;
+
+  input[type="range"] {
+    display: inline-block;
+  }
 
   output {
     display: inline;
