--- a/dev_symposium/introducing_angularjs/partials/book-detail.html
+++ b/dev_symposium/introducing_angularjs/partials/book-detail.html
@@ -1,1 +1,3 @@
-<img src="{{ book.imageUrl }}" class="book-image">
+<img src="images/{{ book.id }}.jpg" class="book-image">
+<h3>{{ book.title }}</h3>
+<p>{{ book.author }}</p>
